# boomerc

./: README.md  meson.build
src/: config.c  config.h  la.c  la.h  main.c  navigation.c  navigation.h  render.c  render.h  screenshot.c  screenshot.h
